--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "module-alias": "^2.2.3",
-    "mongodb": "^5.2.0"
+    "mongoose": "^8.6.1",
+    "tsyringe": "^4.8.0"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.7",
