--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "module-alias": "^2.2.3",
     "mongoose": "^8.6.1",
+    "redis": "^4.7.0",
     "tsyringe": "^4.8.0"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/module-alias": "^2.0.4",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^22.5.1",
+    "@types/redis": "^4.0.11",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.8.0",
