--- a/package.json
+++ b/package.json
@@ -22,18 +22,28 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "module-alias": "^2.2.3",
+    "mongodb": "^5.2.0",
     "mongoose": "^8.6.1",
     "redis": "^4.7.0",
+    "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.7.5",
+    "ts-node": "^10.9.2",
     "tsyringe": "^4.8.0"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.7",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.0",
     "@types/module-alias": "^2.0.4",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^22.5.1",
     "@types/redis": "^4.0.11",
+    "@types/socket.io": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.8.0",
