--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,20 @@
     "moduleResolution": "node",
     "baseUrl": "src",
     "paths": {
-      "@/*": ["*"],
-      "@/tests/*": ["../tests/*"]
+      "@application/*": ["application/*"],
+      "@config/*": ["config/*"],
+      "@logger/*": ["logger/*"],
+      "@di/*": ["di/*"],
+      "@infra/*": ["infra/*"],
+      "@presentation/*": ["presentation/*"],
+      "@domain/*": ["domain/*"],
+      "@shared/*": ["shared/*"],
+      "@src/*": ["./*"]
     },
     "esModuleInterop": true,
-    "strict": true
+    "strict": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": ["src", "tests"]
 }
